RCS-44 Task done. Some refactoring